--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         align-items: center;
         min-height: 100vh;
         width: 100%;
+        background-color: #fafafc;
       }
     </style>
   </head>
